--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="ko">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="title" content="키친아트">
+  <meta name="description"
+    content="키친아트는 61년 오랜세월 동안 고객니즈에 귀기울여 왔습니다. 단순히 오래된 키친아트가 아닌 앞으로의 키친아트를 위해 나날이 정진하며 개발하고 있습니다.">
+  <meta name="keywords" content="주방속의 예술감각 키친아트">
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="주방속의 예술감각, 키친아트" />
+  <meta property="og:url" content="https://anrbl.github.io/kitchen-art" />
+  <meta property="og:image" content="./images/opg_img.jpg" />
+  <meta property="og:image:alt" content="kitchen-Art which symbolizes spiking graph" />
+  <meta property="og:description"
+    content="키친아트는 61년 오랜세월 동안 고객니즈에 귀기울여 왔습니다. 단순히 오래된 키친아트가 아닌 앞으로의 키친아트를 위해 나날이 정진하며 개발하고 있습니다." />
+  <meta property="og:site_name" content="주방속의 예술감각, 키친아트" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <meta name="twitter:card" content="주방속의 예술감각, 키친아트">
+  <meta name="twitter:title" content="키친아트">
+  <meta name="twitter:description"
+    content="키친아트는 61년 오랜세월 동안 고객니즈에 귀기울여 왔습니다. 단순히 오래된 키친아트가 아닌 앞으로의 키친아트를 위해 나날이 정진하며 개발하고 있습니다.">
+  <meta name="twitter:url" content="https://anrbl.github.io/kitchen-art">
+  <meta name="twitter:image" content="./images/opg_img.jpg">
+
+
+  <title>키친아트</title>
+  <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="./common.css">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
